--- a/starterProject/src/main/resources/application.properties
+++ b/starterProject/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/msa
+spring.datasource.username=root
+spring.datasource.password=root
+spring.flyway.enabled=true
 
+spring.jpa.show-sql: true
+spring.jpa.hibernate.ddl-auto: create
